--- a/.azure-pipelines/test-scenario-2-wrong-region.yml
+++ b/.azure-pipelines/test-scenario-2-wrong-region.yml
@@ -1,5 +1,4 @@
 # Test Scenario 2: Invalid Azure Region
-# This pipeline will fail because of invalid region name
 
 trigger: none
 
@@ -13,16 +12,19 @@ stages:
       - job: TerraformDeploy
         displayName: 'Terraform Apply'
         steps:
-          - task: TerraformInstaller@0
+          # Install Terraform
+          - bash: |
+              wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+              echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+              sudo apt update && sudo apt install terraform -y
+              terraform --version
             displayName: 'Install Terraform'
-            inputs:
-              terraformVersion: 'latest'
           
+          # Create broken config
           - bash: |
               mkdir -p terraform-test
               cd terraform-test
               
-              # Create main.tf with INVALID region
               cat > main.tf << 'EOF'
               terraform {
                 required_version = ">= 1.0"
@@ -42,11 +44,11 @@ stages:
               # This will fail - invalid region format
               resource "azurerm_resource_group" "test" {
                 name     = "rg-test-region"
-                location = "east-us"  # ← ERROR: Should be "eastus" not "east-us"
+                location = "east-us"  # ← ERROR: Should be "eastus"
               }
               EOF
               
-              echo "Created Terraform with invalid region"
+              echo "📝 Created Terraform with invalid region"
               cat main.tf
             displayName: 'Create Terraform with Invalid Region'
           
@@ -57,5 +59,5 @@ stages:
           
           - bash: |
               cd terraform-test
-              terraform plan
-            displayName: 'Terraform Plan (Expected to Fail)'
+              terraform validate
+            displayName: 'Terraform Validate (Expected to Fail)'
