--- a/src/agents/infra-healer/requirements.txt
+++ b/src/agents/infra-healer/requirements.txt
@@ -7,4 +7,5 @@ openai==1.12.0
 GitPython==3.1.41
 PyYAML==6.0.1
 requests==2.31.0
-python-dotenv==1.0.1
+python-dotenv==1.0.1PyGithub>=2.1.1
+PyGithub>=2.1.1
