GPT-5.2 support with max_completion_tokens  Skip work items for very low confidence (<50%) - Duplicate PR prevention (prevents spam)

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ ADO_PAT=your-personal-access-token
 # Azure OpenAI
 OPENAI_ENDPOINT=https://your-openai.openai.azure.com/
 OPENAI_API_KEY=will-be-retrieved-from-keyvault
-OPENAI_DEPLOYMENT_NAME=gpt-4o
+OPENAI_DEPLOYMENT_NAME=gpt-5.2
 
 # Resource naming
 RESOURCE_PREFIX=agentic-devops
