--- a/.azure-pipelines/test-scenario-3-syntax-error.yml
+++ b/.azure-pipelines/test-scenario-3-syntax-error.yml
@@ -16,7 +16,7 @@ stages:
         steps:
           - bash: |
               wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-              echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/services.list.d/hashicorp.list
+              echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
               sudo apt update && sudo apt install terraform -y
             displayName: 'Install Terraform'
           
